gcc/testsuite/gdc.test/fail_compilation/fail4517.d

enum E : ushort
{
    A, B
}

void main()
{
    E e;
    final switch(e)
    {
        case E.A:
            break;
    }
}
